# 5thyear

./: .gitignore  LICENSE  README.md
PDP/assignement1/: report.tex
PDP/exc2a/: config.mak
PDP/exc2a/C/exercise2a/template/: Makefile  mandelbrot.c
PDP/mandelbrot/: config.mak
PDP/mandelbrot/C/exercise1/template/: Makefile  mandelbrot.c
app/mpiio/C/: Makefile  cdat2pgm  ioutils.c  ioutils.h  mpiio.c
app/mpiio/F/: Makefile  fdat2pgm  fioview  ioutils.f90  mpiio.f90
mpp/MPP-casestudy/: .gitignore  CMakeLists.txt  Doxyfile.in  submitter.sh
mpp/MPP-casestudy/data/: morar-edges  static_edges
mpp/MPP-casestudy/include/: comm.h  helpers.h  pgmio.h
mpp/MPP-casestudy/report/: caches.txt  report.tex  results.ods
mpp/MPP-casestudy/src/: comm.c  edges.c  helpers.c
mpp/hello_world/: hello.c
mpp/pi/: pi.c
mpp/pingpong/: .gitignore  pingpong.c  timeit.py
programming_skills/: .gitignore  individual.tex
threaded/C/HelloWorld/: hello  helloworld.c
threaded/C/Mandelbrot/: ._area.c  Makefile  area  area.c
threaded/C/MolDyn/: ._dfill.c  Makefile  forces.c  main.c  md
threaded/Fortran90/Mandelbrot/: ._area.f90  area.sct
threaded/Fortran90/Mandelbrot2/: Makefile
threaded/Fortran90/MolDyn/: Makefile
threaded/Java/: Area.java  area.sct
threaded/caches/: .gitignore  Makefile  caches.c
threaded/project1/: data.ods  loops  loops.c  submitter.sh
threaded/project1/auto/: submitter.sh.o3708
threaded/project1/best_scheduler/: submitter.sh.o4043  submitter.sh.o4044  submitter.sh.o4045  submitter.sh.o4046  submitter.sh.o4047  submitter.sh.o4048
threaded/project1/dynamic/: submitter.sh.o3675  submitter.sh.o3676  submitter.sh.o3677  submitter.sh.o3678  submitter.sh.o3679  submitter.sh.o3680  submitter.sh.o3681  submitter.sh.o3682  submitter.sh.o3683  submitter.sh.o3684
threaded/project1/guided/: submitter.sh.o3695  submitter.sh.o3696  submitter.sh.o3697  submitter.sh.o3698  submitter.sh.o3699  submitter.sh.o3700  submitter.sh.o3701  submitter.sh.o3702  submitter.sh.o3703  submitter.sh.o3704
threaded/project1/report/: ranges.py  report.tex
threaded/project1/static/: submitter.sh.o3685  submitter.sh.o3686  submitter.sh.o3687  submitter.sh.o3688  submitter.sh.o3689  submitter.sh.o3690  submitter.sh.o3691  submitter.sh.o3692  submitter.sh.o3693  submitter.sh.o3694
threaded/project1/static_no_chunksize/: submitter.sh.o3706
threaded/project2/: Makefile  loops  loops.c  submitter.sh
threaded/project2-old/: .gitignore  loops
threaded/project2/report/: report.tex
